0.26.0 - 2016-10-13
--------------------------------------------------------------------

    * Petrel now provides optional message authentication via
      crypto/HMAC

    * OmitPrefix has been removed from ClientConfig. petrel.Client now
      always sends length-prefixed messages.

    * Long manual-style godoc preamble removed in favor of more
      informative documentation for individual structs and methods..


0.25.0 - 2016-10-07
--------------------------------------------------------------------

    * Petrel and Pclient packages integrated.

      Name changes: petrel.Config   -> ServerConfig
                    pclient.Config  -> ClientConfig
                    petrel.Handler  -> petrel.Server
                    Handler.AddFunc -> Server.Register

      All constructors have been renamed (see go doc).

    * New option in ServerConfig: Reqlen, the maximum number of bytes
      which will be read for any request.

    * New option in ServerConfig: LogIP, whether to log Client IPs on
      connect or not.

    * Improvements in reliability and correctness of network handling.

    * Client now returns nil and an error when it receives an error
      response from the Server side.

    * Better consistency in messaging; efficiency improvements in Msg
      generation.

    * Long-form docs are temporarily gutted for rebuild next release.

    * Version jump: unified versions and added 1


0.22.0 - 2016-03-30
--------------------------------------------------------------------

    * Use qsplit.LocationsOnce for faster separation of request
      command and args


0.21.0 - 2016-03-29
--------------------------------------------------------------------

    * Name change: asock -> petrel

    * asock.Asock is now petrel.Handler

    * Asock.AddHandler is now Handler.AddFunc

    * Valid settings for Handler.AddFunc's second argument (mode) have
      changed from "split"/"nosplit" to "args"/"blob". This change