@@ -60,7 +60,7 @@ func sleeperclient(sn string, t *testing.T) {
 	if err != nil {
 		t.Fatalf("client instantiation failed! %s", err)
 	}
-	defer ac.Close()
+	defer ac.Quit()
 
 	time.Sleep(50 * time.Millisecond)
 	resp, err := ac.Dispatch([]byte("echo it works!"))
