@@ -210,7 +210,7 @@ func echoTLSclient(sn string, t *testing.T) {
 	if err != nil {
 		t.Fatalf("client instantiation failed! %s", err)
 	}
-	defer ac.Close()
+	defer ac.Quit()
 
 	resp, err := ac.Dispatch([]byte("echo it works!"))
 	if err != nil {
