@@ -4,6 +4,9 @@
     * Petrel now provides optional message authentication via
       crypto/HMAC
 
+    * Client.Close is now Client.Quit, to match the Server shutdown
+      method.
+
     * OmitPrefix has been removed from ClientConfig. petrel.Client now
       always sends length-prefixed messages.
 
